[gd_scene load_steps=16 format=3 uid="uid://b1oia4nijrb8v"]

[ext_resource type="Script" path="res://scripts/control/tutorial.gd" id="1_amwn1"]
[ext_resource type="PackedScene" uid="uid://c8f8v752na7r7" path="res://scenes/control/info_game.tscn" id="2_rcth1"]
[ext_resource type="PackedScene" uid="uid://cjstymikjdn8k" path="res://scenes/backgrounds/backgroundtilset.tscn" id="3_lm4cr"]
[ext_resource type="PackedScene" uid="uid://dwymrskrjof48" path="res://scenes/characters/portal.tscn" id="4_nrs6b"]
[ext_resource type="PackedScene" uid="uid://8c657owt4d1a" path="res://scenes/characters/palanca.tscn" id="5_3wvf7"]
[ext_resource type="PackedScene" uid="uid://d13wrelnnvc0l" path="res://scenes/backgrounds/level0.1.tscn" id="6_e8iu3"]
[ext_resource type="PackedScene" uid="uid://cmk6vnhm5xsag" path="res://scenes/characters/tunnel.tscn" id="7_j56jf"]
[ext_resource type="PackedScene" uid="uid://dmbbt85a1usuw" path="res://scenes/characters/player_1.tscn" id="8_mhl0u"]
[ext_resource type="PackedScene" uid="uid://c4upamt70y32a" path="res://scenes/characters/player_2.tscn" id="9_q2ac6"]
[ext_resource type="FontFile" uid="uid://c7wki63mjikbw" path="res://Art/Resources/FONT/Tiny5-Regular.ttf" id="10_mgwo2"]
[ext_resource type="AudioStream" uid="uid://bqx52xvrs7m1e" path="res://Art/sounds/soundtrack.mp3" id="11_uaofc"]
[ext_resource type="PackedScene" uid="uid://d1i5hhecp0k8k" path="res://scenes/characters/stalactite.tscn" id="12_fe60y"]

[sub_resource type="LabelSettings" id="LabelSettings_34134"]
font = ExtResource("10_mgwo2")
font_size = 20

[sub_resource type="LabelSettings" id="LabelSettings_34abi"]
font = ExtResource("10_mgwo2")
font_size = 20

[sub_resource type="LabelSettings" id="LabelSettings_60lay"]
font = ExtResource("10_mgwo2")
font_size = 20

[node name="Tutorial" type="Node2D"]
scale = Vector2(2, 2)
script = ExtResource("1_amwn1")

[node name="infoGame" parent="." instance=ExtResource("2_rcth1")]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(284.5, 160)
scale = Vector2(3, 3)

[node name="TileMap2" parent="." instance=ExtResource("3_lm4cr")]
position = Vector2(13, 102.5)

[node name="Portal" parent="." instance=ExtResource("4_nrs6b")]
position = Vector2(526, 178.5)

[node name="palanca" parent="." instance=ExtResource("5_3wvf7")]
position = Vector2(244.5, 183.5)

[node name="TileMap" parent="." instance=ExtResource("6_e8iu3")]
position = Vector2(17, -14.5)
layer_0/tile_data = PackedInt32Array(1048583, 65537, 0, 1048582, 65537, 0, 1048581, 65537, 0, 1048580, 65537, 0, 1048579, 65537, 0, 1048578, 65537, 0, 1048577, 65537, 0, 1048576, 65537, 0, 1114119, 65537, 1, 1114118, 65537, 1, 1114117, 65537, 1, 1114116, 65537, 1, 1114115, 65537, 1, 1114114, 65537, 1, 1114113, 65537, 1, 1114112, 65537, 1, 1048584, 65537, 0, 1114120, 65537, 1, 983057, 1, 1, 1048593, 1, 1, 1114129, 65537, 2, 983058, 131073, 1, 1048594, 65537, 1, 1114130, 65537, 2, 1048595, 65537, 0, 1114131, 65537, 2, 1114132, 65537, 2, 1114133, 65537, 2, 1114134, 65537, 2, 1048599, 131073, 2, 983063, 1, 0, 1048597, 65537, 0, 1048596, 65537, 0, 1048598, 65537, 0, 983064, 327681, 2, 1114138, 1, 0, 983068, 1, 0, 1048603, 1, 0, 1114139, 65537, 1, 1114140, 65537, 1, 1048604, 65537, 1, 983069, 65537, 1, 1114141, 65537, 1, 458785, 1, 1, 524321, 1, 1, 917514, 65537, 2, 917515, 65537, 2, 917516, 65537, 2, 917517, 65537, 2, 786465, 1, 1, 786466, 131073, 1, 524322, 131073, 1, 458786, 131073, 1, 1179648, 65537, 1, 1179649, 65537, 1, 1179650, 65537, 1, 1179651, 65537, 1, 1179652, 65537, 1, 1245188, 65537, 1, 1245189, 65537, 1, 1245190, 65537, 1, 1245191, 65537, 1, 1245192, 65537, 1, 1179656, 65537, 1, 1179655, 65537, 1, 1179654, 65537, 1, 1179653, 65537, 1, 1245184, 65537, 1, 1245185, 65537, 1, 1245186, 65537, 1, 1245187, 65537, 1, 1310724, 65537, 2, 1310723, 65537, 2, 1310722, 65537, 2, 1310721, 65537, 2, 1310720, 65537, 2, 1310725, 65537, 2, 1310726, 65537, 2, 1310727, 65537, 2, 1310728, 65537, 2, 1245199, 65537, 0, 1310735, 65537, 2, 1310736, 65537, 2, 1245200, 65537, 0, 1245201, 65537, 0, 1245202, 65537, 0, 1245203, 65537, 0, 1245204, 65537, 0, 1245205, 65537, 0, 1245206, 65537, 0, 1245207, 65537, 0, 1245208, 65537, 0, 1245209, 65537, 1, 1245210, 65537, 1, 1245211, 65537, 1, 1245212, 65537, 1, 1179676, 65537, 1, 1179677, 65537, 1, 1245213, 65537, 1, 1179675, 65537, 1, 1179674, 65537, 1, 1179673, 1, 0, 1310737, 65537, 2, 1310738, 65537, 2, 1310739, 65537, 2, 1310740, 65537, 2, 1310741, 65537, 2, 1310742, 65537, 2, 1310743, 65537, 2, 1310744, 65537, 2, 1310745, 65537, 2, 1310746, 65537, 2, 1310747, 65537, 2, 1310748, 65537, 2, 1310749, 65537, 2, 1048605, 65537, 1, 917534, 65537, 1, 917533, 1, 0, 917535, 65537, 1, 1048607, 65537, 1, 1048606, 65537, 1, 1048610, 131073, 1, 1048608, 65537, 1, 1048609, 65537, 1, 1048585, 65537, 0, 1048586, 65537, 0, 1048587, 65537, 0, 1048588, 65537, 0, 1048589, 65537, 0, 1048590, 131073, 0, 1114121, 65537, 1, 1114122, 65537, 1, 1114123, 65537, 1, 1114124, 65537, 1, 1114125, 65537, 1, 1114126, 131073, 1, 1114142, 65537, 1, 1114143, 65537, 1, 1114144, 65537, 1, 1114145, 65537, 1, 1179657, 65537, 1, 1179658, 65537, 1, 1179659, 65537, 1, 1179660, 65537, 1, 1179661, 65537, 1, 1179662, 131073, 1, 1179678, 65537, 1, 1179679, 65537, 1, 1179680, 65537, 1, 1179681, 131073, 1, 1245193, 65537, 1, 1245194, 65537, 1, 1245195, 65537, 1, 1245196, 65537, 1, 1245197, 65537, 1, 1245198, 65537, 1, 1245214, 65537, 1, 1245215, 65537, 1, 1245216, 65537, 1, 1245217, 131073, 1, 131071, 1, 0, 196607, 1, 1, 262143, 131073, 1, 327679, 1, 1, 393215, 131073, 1, 458751, 1, 1, 524287, 131073, 1, 589823, 1, 1, 655359, 131073, 1, 720895, 131073, 1, 786431, 131073, 1, 851967, 131073, 1, 917503, 131073, 1, 983039, 131073, 1, 1048575, 1, 1, 1114111, 1, 1, 1179647, 1, 1, 1245183, 1, 1, 1310719, 1, 1, 1376255, 1, 2, 65536, 262145, 2, 65537, 262145, 2, 65538, 262145, 2, 65539, 262145, 2, 65540, 262145, 2, 65541, 262145, 2, 65542, 262145, 2, 65543, 262145, 2, 65544, 262145, 2, 65545, 262145, 2, 65546, 262145, 2, 65547, 262145, 2, 65548, 262145, 2, 65549, 262145, 2, 65550, 262145, 2, 65551, 262145, 2, 65552, 262145, 2, 65553, 262145, 2, 65554, 262145, 2, 65555, 262145, 2, 65556, 262145, 2, 65557, 262145, 2, 65558, 262145, 2, 65559, 262145, 2, 65560, 262145, 2, 65561, 262145, 2, 65562, 262145, 2, 65563, 262145, 2, 65564, 262145, 2, 65565, 262145, 2, 65566, 262145, 2, 65567, 262145, 2, 65568, 262145, 2, 65569, 65537, 0, 65570, 131073, 0, 131105, 1, 1, 131106, 131073, 1, 196641, 1, 1, 196642, 131073, 1, 262177, 1, 1, 262178, 131073, 1, 327713, 1, 1, 327714, 131073, 1, 393249, 1, 1, 393250, 131073, 1, 589857, 1, 1, 589858, 131073, 1, 655393, 1, 1, 655394, 131073, 1, 720929, 1, 1, 720930, 131073, 1, 852001, 65537, 1, 852002, 131073, 1, 917537, 65537, 1, 917538, 131073, 1, 983073, 65537, 1, 983074, 131073, 1, 1114146, 131073, 2, 851972, 1, 0, 851973, 65537, 0, 851974, 65537, 0, 851975, 65537, 0, 851976, 65537, 0, 851977, 65537, 0, 851978, 65537, 0, 1310729, 65537, 2, 1310730, 65537, 2, 1310731, 65537, 2, 1310732, 65537, 2, 1310733, 65537, 2, 1310734, 65537, 2, 1310750, 65537, 2, 1310751, 65537, 2, 1310752, 65537, 2, 1310753, 65537, 2, 1310754, 327681, 2, 917519, 65537, 2, 917520, 65537, 2, 917521, 65537, 1, 917522, 131073, 1, 917518, 65537, 2, 851998, 1, 0, 851999, 65537, 0, 852000, 65537, 0, 917536, 65537, 1, 983070, 65537, 1, 983071, 65537, 1, 983072, 65537, 1, 917508, 1, 2, 917509, 65537, 2, 917510, 65537, 2, 917511, 65537, 2, 917512, 65537, 2, 917513, 65537, 2, 851979, 65537, 0, 851980, 65537, 0, 851981, 65537, 0, 851982, 65537, 0, 851983, 65537, 0, 851984, 65537, 0, 851985, 65537, 0, 851986, 131073, 0)

[node name="tunnel" parent="TileMap" instance=ExtResource("7_j56jf")]
position = Vector2(416, 250)

[node name="Player1" parent="TileMap" instance=ExtResource("8_mhl0u")]
position = Vector2(97.5, 186)

[node name="Player2" parent="TileMap" instance=ExtResource("9_q2ac6")]
position = Vector2(20, 236)

[node name="actionP1" type="Label" parent="."]
offset_left = 90.5
offset_top = 90.5
offset_right = 308.5
offset_bottom = 113.5
label_settings = SubResource("LabelSettings_34134")
horizontal_alignment = 1
vertical_alignment = 1

[node name="actionP2" type="Label" parent="."]
offset_left = 36.0
offset_top = 257.5
offset_right = 226.0
offset_bottom = 280.5
label_settings = SubResource("LabelSettings_34abi")
horizontal_alignment = 1
vertical_alignment = 1

[node name="sountrackGame" type="AudioStreamPlayer" parent="."]
process_mode = 3
stream = ExtResource("11_uaofc")
bus = &"music"

[node name="Label" type="Label" parent="."]
offset_left = 198.0
offset_top = 37.0
offset_right = 388.0
offset_bottom = 60.0
text = "PRESS (P) TO PAUSE"
label_settings = SubResource("LabelSettings_60lay")

[node name="stalactite" parent="." instance=ExtResource("12_fe60y")]
position = Vector2(333, 225.5)
